# skills

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .skills-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VALIDATION.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  skill-request.yml
.github/workflows/: ci.yml  publish.yml  release-version.yml  score-skills.yml  validate-skills.yml
SKILL_TEMPLATE/: SKILL.md
analyzing-charts/: SKILL.md
analyzing-charts/references/: anomaly-patterns.md  chart-types.md  visualizations.md
analyzing-funnels/: SKILL.md
analyzing-funnels/references/: funnel-parameters.md
analyzing-insights/: SKILL.md
analyzing-insights/references/: insight-types.md
analyzing-web-traffic/: SKILL.md
analyzing-web-traffic/references/: trend-comparison.md  web-events.md
building-segments/: SKILL.md
configuring-watchers/: SKILL.md
configuring-watchers/references/: intervals.md  quotas.md  watcher-types.md
creating-insights/: SKILL.md
creating-insights/references/: funnel-insights.md  fyi-discoveries.md  semantic-insights.md  sql-insights.md
deciding-actions/: SKILL.md
deciding-actions/references/: discovery-workflow.md
evaluating-skills/: SKILL.md
evaluating-skills/references/: examples.md  skill-checklist.md
exploring-data/: SKILL.md
exploring-data/references/: connection-types.md  schema-patterns.md
forecasting-timeseries/: SKILL.md
forecasting-timeseries/references/: anomaly-detection.md
integrating-external/: SKILL.md
integrating-external/references/: mcp-servers.md  slack-notifications.md
managing-discoveries/: SKILL.md
modeling-semantics/: SKILL.md
modeling-semantics/references/: built-in-sources.md  dimensions.md  measures.md  relations.md
providing-feedback/: SKILL.md
providing-feedback/references/: cli-usage.md
querying-lakehouse/: SKILL.md
querying-lakehouse/references/: altertable-duckdb-functions.md  duckdb-functions.md  friendly-duckdb-sql.md  optimization.md  query-patterns.md
scripts/: score-skills.py  sync-agents-md.py  sync-agents-md.sh
scripts/scorer/: __init__.py  judges.py  models.py  output.py  spec.py
scripts/skills_feedback/: __init__.py  api.py  cli.py  config.py  constants.py  git.py  models.py  output.py  storage.py  validation.py
scripts/tests/: test_judges.py  test_models.py  test_output.py  test_score_skills.py  test_spec.py  vulture_allowlist.py
skills/analyzing-insights/: SKILL.md
skills/analyzing-web-traffic/: SKILL.md
skills/ask/: SKILL.md
skills/building-segments/: SKILL.md
skills/configuring-tasks/: SKILL.md
skills/configuring-watchers/: SKILL.md
skills/creating-insights/: SKILL.md
skills/deciding-actions/: SKILL.md
skills/evaluating-skills/: SKILL.md
skills/forecasting-timeseries/: SKILL.md
skills/managing-discoveries/: SKILL.md
skills/querying-lakehouse/: SKILL.md
skills/tracking-events/: SKILL.md
skills/understanding-platform/: SKILL.md
skills/using-memory/: SKILL.md
tracking-events/: SKILL.md
tracking-events/references/: event-definitions.md  event-tracking.md  identity-and-aliasing.md  identity-resolution.md  user-traits.md
understanding-platform/: SKILL.md
understanding-platform/references/: connections.md  (+6 more)
using-memory/: SKILL.md
(+47 files in other folders)
