[project]
name = "altertable-skills"
version = "0.1.0"
description = "Skills for AI agents"
requires-python = ">=3.12"
dependencies = ["fire", "pydantic", "pyyaml"]

[project.scripts]
skills-feedback = "skills_feedback.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "pyyaml",
    "skills-cli",
    "fire",
    "litellm",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/skills_feedback"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["scripts/skills_feedback"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
