[project]
name = "altertable-skills"
version = "0.1.0"
description = "Skills for AI agents"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
feedback = [
    "fire",
    "pydantic",
    "pyyaml",
]

[project.scripts]
skills-feedback = "skills_feedback.cli:main"

[dependency-groups]
dev = [
    "altertable-skills[feedback]",
    "ruff",
    "ty",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "skills-cli",
    "litellm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/skills_feedback"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
addopts = "--strict-markers -n auto"

[tool.coverage.run]
source = ["scripts/skills_feedback"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.codespell]
ignore-words-list = "notin,iif"

[tool.bandit]
targets = ["scripts/skills_feedback"]
exclude_dirs = ["scripts/tests"]
skips = ["B404", "B603", "B607"]
