[project]
name = "alterable-skills"
version = "0.1.0"
description = "Skills for AI agents"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "skills-cli",
    "fire",
    "litellm",
    "pydantic",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.codespell]
ignore-words-list = "notin,iif"

[tool.bandit]
exclude_dirs = ["scripts/tests"]
skips = ["B404", "B603", "B607"]
